<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="our_font">fonts/Gabriola.ttf</string>

    <string name="app_name">Время Достижений!</string>
    <string name="action_settings">Settings</string>
    <string name="i_will_do_it_in">Я сделаю это за</string>
    <string name="add_goal_button_text">Поставить цель!</string>
    <string name="starting_days">" 16 "</string>
    <string name="remaining">"Осталось "</string>
    <string name="days">" дней"</string>
    <string name="more_tips">Еще советов</string>
    <string name="goal_description">Осёл - не очень популярное средство передвижения. Зато оригинальное
    и удобное. Наверное. В общем, наши советы помогут вам полусить право на вождение ослов. Только
    будьте бдительны иногда осёл опрокидывает водителя, а потом хамит. Осёл - не очень популярное средство передвижения. Зато оригинальное
    и удобное. Наверное. В общем, наши советы помогут вам полусить право на вождение ослов. Только
    будьте бдительны иногда осёл опрокидывает водителя, а потом хамит.</string>
    <string name="message_stub">Запомните, что мясо варится 2 часа, а курица час. Иначе вы рискуете
    впитать вампирскую страсть к полусырому мясцу, а курицу так и не увидеть в том объеме,
    который изначально положили в кастрюлю.</string>
    <string name="my_goals">Мои Цели</string>
    <string name="final_phrase">Цель достигнута!</string>

</resources>
