<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:id="@+id/top_layout">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ribbon_2"
                android:paddingTop="@dimen/padding_20"
                android:paddingBottom="@dimen/padding_15"
                android:id="@+id/ribbon"
                android:scaleType="fitXY"/>

        <TextView
                android:id="@+id/goalNameDetail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:maxLines="2"
                android:layout_centerInParent="true"
                style="@style/GabriolaOrangeDarkFontStyle"/>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/bottom_layout">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingBottom="@dimen/padding_20"
                android:paddingTop="@dimen/padding_15"
                android:src="@drawable/button_set_a_goal"
                android:id="@+id/addGoalButton"
                android:scaleType="fitCenter"
                android:clickable="true"/>

        <TextView
                android:id="@+id/addGoalText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_goal_button_text"
                style="@style/GabriolaWhiteFontStyle"/>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_layout"
                    android:layout_above="@id/bottom_layout"
                    android:id="@+id/middle_layout">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/padding_10"
                        android:id="@+id/time_setter_container">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:id="@+id/time_setter_header"
                    android:src="@drawable/time_setter_header"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/time_setter_header"
                            android:id="@+id/time_setter_middle_container">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:id="@+id/time_setter_seek_bar_bg"
                        android:src="@drawable/seek_bar"
                        android:scaleType="fitXY"/>

                <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/padding_30"
                        android:paddingRight="@dimen/padding_30"
                        android:id="@+id/seekbar"
                        android:max="60"
                        android:progress="17"
                        android:thumb="@drawable/seek_thumb"
                        android:progressDrawable="@android:color/transparent"/>

            </RelativeLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time_setter_middle_container"
                    android:id="@+id/time_setter_footer"
                    android:src="@drawable/time_setter_footer"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/i_will_do_it_in_text_view"
                    android:text="@string/i_will_do_it_in"
                    style="@style/GabriolaGrayFontStyle"/>

            <TextView
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/daysQuantity"
                    android:text="@string/starting_days"
                    android:layout_toRightOf="@id/i_will_do_it_in_text_view"
                    style="@style/GabriolaOrangeFontStyle"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/daysText"
                    android:text="@string/days"
                    android:layout_toRightOf="@id/daysQuantity"
                    style="@style/GabriolaGrayFontStyle"/>
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/time_setter_container"
                        android:layout_above="@id/bottom_layout">

            <include layout="@layout/message_view_template"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
