<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_20"
                    android:layout_alignParentTop="true"
                    android:id="@+id/top_layout">
        <ImageView
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_20"
                android:paddingRight="@dimen/padding_20"
                android:adjustViewBounds="true"
                android:src="@drawable/clock"
                android:scaleType="fitXY"/>

        <include layout="@layout/timer_container"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/timer_text_container"
                        android:layout_toRightOf="@id/clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/remaining"
                    android:layout_centerVertical="true"
                    android:text="@string/remaining"
                    style="@style/GabriolaGrayFontStyle"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/days_quantity"
                    android:text="@string/starting_days"
                    android:layout_toRightOf="@id/remaining"
                    style="@style/GabriolaOrangeFontStyle"/>

            <TextView
                    android:id="@+id/days_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/days"
                    android:layout_toRightOf="@id/days_quantity"
                    style="@style/GabriolaGrayFontStyle"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/bottom_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_20"
                    android:paddingRight="@dimen/padding_20"
                    android:layout_alignParentBottom="true">

        <ImageView
                android:id="@+id/more_tips_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingBottom="@dimen/padding_20"
                android:paddingTop="@dimen/padding_15"
                android:src="@drawable/button_more_advices_screen3"
                android:scaleType="fitCenter"
                android:clickable="true"/>

        <TextView
                android:id="@+id/back_to_all_button_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/more_tips"
                style="@style/GabriolaWhiteFontStyle"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0"
            android:layout_below="@id/top_layout"
            android:layout_above="@id/bottom_layout"
            android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:id="@+id/middle_layout_one">

            <ImageView
                    android:id="@+id/goal_name_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ribbon_screen3"
                    android:paddingRight="@dimen/padding_20"
                    android:paddingLeft="@dimen/padding_20"
                    android:scaleType="fitCenter"/>

            <TextView
                    android:id="@+id/goal_name_3_screen"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:maxLines="2"
                    android:gravity="center_horizontal"
                    android:text="Название цели"
                    style="@style/GabriolaOrangeDarkFontStyle"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/goal_cover_holder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_above="@id/goal_name_bg"
                            android:paddingLeft="@dimen/padding_20"
                            android:paddingRight="@dimen/padding_20"
                            android:layout_centerHorizontal="true">
                <ImageView
                        android:id="@+id/prev_arrow_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_30"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:src="@drawable/prev_arrow_button_selector"/>

                <ImageView
                        android:id="@+id/next_arrow_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_30"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:src="@drawable/next_arrow_button_selector"/>

                <ImageView
                        android:id="@+id/goal_cover_3_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@id/prev_arrow_button"
                        android:layout_toLeftOf="@id/next_arrow_button"
                        android:adjustViewBounds="true"
                        android:src="@drawable/goal2"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:id="@+id/middle_layout_two">

            <ImageView
                    android:id="@+id/zabor_top_3_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/zabor_verh_3screen"
                    android:paddingTop="@dimen/padding_15"
                    android:scaleType="fitXY"/>

            <ImageView
                    android:id="@+id/zabor_bottom_3_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/zabor_niz_3screen"
                    android:scaleType="fitXY"/>

            <ImageView
                    android:id="@+id/zabor_middle_3_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/zabor_top_3_screen"
                    android:layout_above="@id/zabor_bottom_3_screen"
                    android:src="@drawable/square"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_30"
                            android:id="@+id/yellow_pick_container">
                <ImageView
                        android:id="@+id/yellow_pick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/nomber_yellow"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"/>

                <TextView
                        android:id="@+id/message_number"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="18"
                        style="@style/GabriolaGraySmallFontStyle"/>

            </RelativeLayout>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        android:layout_below="@id/zabor_top_3_screen"
                        android:layout_above="@id/zabor_bottom_3_screen">
                <TextView
                        android:id="@+id/message_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_stub"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        style="@style/GabriolaGraySmallFontStyle"/>
            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>